# GuessMyPlace

./: ..gitignore  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  index.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cpp-tests.yml  sync-huggingface.yml  sync-to-huggingface.yml
backend/: Dockerfile  main.py  requirements.txt  run.py  seed_database.py
backend/algorithms/cpp/: CMakeLists.txt  README.md  decision_tree.cpp  decision_tree.h  information_gain.cpp  information_gain.h  probability_engine.cpp  probability_engine.h
backend/algorithms/cpp/tests/: CMakeLists.txt  test_decision_tree.cpp  test_information_gain.cpp  test_probability_engine.cpp
backend/algorithms/python/: __init__.py  answer_analyzer.py  question_selector.py
backend/app/: __init__.py  config.py
backend/app/models/: place.py  question.py  session.py
backend/app/routes/: game.py  health.py  stats.py
backend/app/services/: data_service.py  game_service.py  question_service.py  stats_service.py
backend/app/utils/: error_handlers.py  firebase_client.py  redis_client.py  validators.py
backend/tests/: conftest.py
backend/tests/integration/: test_game_flow.py
backend/tests/unit/: test_answer_analyzer.py  test_question_selector.py
data/: places.json
data/places/: cities.json  countries.json  historic_places.json
data/questions/: question_bank.json
data/schema/: place_schema.json  question_schema.json
data/scripts/: combine_data.py  validate_data.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATA_FORMAT.md
frontend/: .env.example  .gitignore  index.html  metadata.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  README.md  types.ts
frontend/src/components/: GameScreen.tsx  GuessScreen.tsx  ProgressBar.tsx  ResultScreen.tsx  WelcomeScreen.tsx
frontend/src/pages/: Game.tsx  Home.tsx
frontend/src/services/: api.ts
frontend/src/store/: gameStore.ts
frontend/src/types/: game.ts
scripts/: build-cpp.sh  deploy.sh  setup.sh  test.sh
